--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/xSeftx/WebStart#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-cssmin": "^0.2.0"
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.1.0"
   },
   "dependencies": {
     "browser-sync": "^2.26.7"
