--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
     "browser-sync": "^2.26.7"
