--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node-sass": "^4.14.1"
   },
   "dependencies": {
-    "browser-sync": "^2.26.7"
+    "animate.css": "^4.1.0",
+    "browser-sync": "^2.26.7",
+    "wow.js": "^1.2.2"
   }
 }
