--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
   },
   "homepage": "https://github.com/xSeftx/WebStart#readme",
   "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "cross-env": "^7.0.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-cssmin": "^0.2.0",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.1.0",
     "node-sass": "^4.14.1"
   },
   "dependencies": {
     "animate.css": "^4.1.0",
     "browser-sync": "^2.26.7",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-tinypng-compress": "^1.2.5",
+    "gulp-update": "0.0.2",
     "wow.js": "^1.2.2"
   }
 }
